# ahorraai-backend

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  bot_telegram.py  docker-compose.yml  lambda_function.py  nixpacks.toml  pyproject.toml  railway (1).json  railway.json  run_bot_polling.py
.github/workflows/: ci.yml
data/templates/: businesses.csv  businesses_cleaned.csv  coverage_gaps.csv  intents.csv  offers.csv  offers_cleaned.csv
docs/: architecture.md  deployment.md  discovery-map.md  google-sheets-blueprint.md  roadmap.md
docs/archive/: legacy-ahorraai-backend-readme.md
events/: telegram_text_message.json
infra/sql/: 001_initial_schema.sql  load_data.sql
src/ahorraai_vigo/: __init__.py  main.py
src/ahorraai_vigo/api/: deps.py
src/ahorraai_vigo/api/routes/: health.py  offers.py  web.py  webhooks.py
src/ahorraai_vigo/bot/: app.py  keyboards.py  states.py  texts.py
src/ahorraai_vigo/bot/handlers/: business.py  citizen.py  common.py
src/ahorraai_vigo/bot/middlewares/: context.py  db.py
src/ahorraai_vigo/core/: config.py
src/ahorraai_vigo/db/: bootstrap.py  session.py
src/ahorraai_vigo/dev/: __init__.py  polling.py  seed_demo.py  seed_demo_main.py
src/ahorraai_vigo/domain/: enums.py
src/ahorraai_vigo/modules/businesses/: __init__.py  models.py  repository.py  (+1 more)
src/ahorraai_vigo/scrapers/: __init__.py  base.py
src/ahorraai_vigo/services/: marketplace.py
tests/: agent.js  config.js  conftest.py  db.js  index.js  notifications.js  package.json  supabase.js  test_config.py  test_marketplace_service.py
(+13 files in other folders)
