[project]
name = "ahorraai-vigo"
version = "0.3.0"
description = "MVP SaaS conversacional para conectar ciudadanos y negocios locales con IA."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.7,<4.0",
    "asyncpg>=0.29,<1.0",
    "fastapi>=0.115,<1.0",
    "pydantic-settings>=2.3,<3.0",
    "sqlalchemy>=2.0.32,<3.0",
    "uvicorn[standard]>=0.30,<1.0",
]

[project.optional-dependencies]
dev = [
    "aiosqlite>=0.20,<1.0",
    "pytest>=8.2,<9.0",
    "pytest-asyncio>=0.23,<1.0",
    "ruff>=0.6,<1.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = "-p no:cacheprovider"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
